# swizzin_dashboard

./: .gitignore  .pre-commit-config.yaml  README.md  gunicorn.sh  pyproject.toml  requirements.txt  setup.sh  swizzin.py  wsgi.py
.github/workflows/: test.yml
core/: config.py  htpasswd.py  middleware.py  profiles.py  profiles_shared.py  tasks.py  util.py
core/custom/: profiles.py
static/css/: swizzin.css
static/js/: httpauth.js  swizzin.js
templates/: apps.html  diskinfo.html  glance.html  index.html  login.html  logout.html  macros.html  netinfo.html  quotainfo.html  raminfo.html  stats.html  systeminfo.html  top.html
tests/: test_requirements.py
