[project]
name = "swizzin-dashboard"
version = "0.0.1"
description = "The swizzin web dashboard"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "authlib>=1.3.2",
    "dnspython<2.3",
    "dnspython==1.16.0 ; python_full_version == '3.5.*'",
    "eventlet>=0.39.1",
    "flask>=3.0.3",
    "flask-htpasswd>=0.5.0",
    "flask-limiter>=3.0.0",
    "flask-socketio>=5",
    "requests>=2.32.4",
]

[dependency-groups]
dev = [
    "ruff>=0.12.9",
    "uv>=0.8.11",
]

[tool.ruff]
# Allow lines to be as long as 120.
line-length = 120

[tool.ruff.format]
quote-style = "preserve"
preview=true

[tool.ruff.lint]
select = [
    "I",
    "E",
    "W",
    "F"
]

ignore = [
    "E402", #These imports are everywhere
]